# forall

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  requirements.txt
.forall/: markers.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/scripts/: check-doc-links.sh
.github/workflows/: crates.yml  docs.yml  packages.yml  pylint.yml  release-smoke.yml  release.yml
cli/: commands.py  io.py
crates/: README.md
crates/forall-authoring/: Cargo.toml
crates/forall-authoring/src/: lib.rs
crates/forall-authoring/src/authoring/: mod.rs  tests.rs
crates/forall-authoring/src/mapping/: schema.rs
crates/forall-hosted-verify/: Cargo.toml
crates/forall-hosted-verify/src/: client.rs  dto.rs  lib.rs  snapshot.rs  tests.rs
crates/forall-hosted-verify/tests/: standalone_flow.rs
crates/forall-mcp-author/: Cargo.toml
crates/forall-mcp-author/src/: lib.rs  server.rs
crates/forall-mcp-author/tests/: brownfield.rs
crates/forall-mcp-author/tests/fixtures/java/src/: Clamp.java
crates/forall-mcp-author/tests/fixtures/rust/: Cargo.toml
crates/forall-mcp-author/tests/fixtures/rust/src/: lib.rs
crates/forall-mcp-author/tests/fixtures/typescript/: package.json
docs/: README.md  architecture.md  getting-started.md  hosted-mcp.md  local-authoring-mcp.md  project-layout.md  workflow.md
examples/: README.md
examples/hello-forall/: README.md
examples/hello-forall/.forall/verify/: mapping.yaml
examples/hello-forall/.forall/workflow/: config.yaml
examples/typescript-greenfield/: .gitignore  README.md  package-lock.json  package.json
examples/typescript-greenfield/.forall/: config.toml  config.yaml
examples/typescript-greenfield/.forall/specs/api/: spec.md
examples/typescript-greenfield/.forall/specs/cart/: spec.md
examples/typescript-greenfield/.forall/specs/catalog/: spec.md
examples/typescript-greenfield/.forall/specs/coupons/: spec.md
examples/typescript-greenfield/.forall/specs/quote/: spec.md
examples/typescript-greenfield/.forall/specs/shipping/: spec.md
examples/typescript-greenfield/.forall/specs/tax/: spec.md
examples/typescript-greenfield/.forall/verified/: config.yaml  mapping.yaml
examples/typescript-greenfield/src/: index.ts
examples/typescript-greenfield/src/api/: healthHandler.ts  quoteHandler.ts
examples/typescript-greenfield/src/catalog/: products.ts  storeConfig.ts
examples/typescript-greenfield/src/domain/: cart.ts  coupons.ts  money.ts  quote.ts  shipping.ts  tax.ts  types.ts
skills/: README.md
skills/forall-mcp-author/: SKILL.md
skills/forall-mcp-verify/: SKILL.md
skills/references/: java.md  layout.md  lemmascript.md  mapping.md  openjml.md  rust.md  typescript.md  verus.md
tests/basic/: test_exceptions.py
