[package]
name = "forall-authoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forall_authoring"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
