[package]
name = "forall-hosted-verify"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forall_hosted_verify"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
walkdir = { workspace = true }

[dev-dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio"] }
forall-authoring = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
